--- a/sigi/src/BackendBundle/Command/SendInscripcionxlsxCommand.html
+++ b/sigi/src/BackendBundle/Command/SendInscripcionxlsxCommand.html
@@ -13,20 +13,20 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
     protected function configure()
     {
         $this
-            ->setName('send:programacion')
-            ->setDescription('Envia la programacion de cursos, para usarse automaticamente los 15 de cada mes.')
+            ->setName('send:inscripcion')
+            ->setDescription('Envia la inscripcion de cursos, para usarse automaticamente los 28 de cada mes.')
         ;
     }
 
     protected function execute(InputInterface $input, OutputInterface $output)
     {
 
-      //gererar programacion
+      //gererar inscrpcion
         $em = $this->getContainer()->get('doctrine')->getManager();
         $researches = $em->getRepository('BackendBundle:Research')->findAll();
         try
         { 
-            $this->generateProgramacionXLSX($researches);
+            $this->generateInscripcionXLSX($researches);
         }
         catch(Exception $e)
         {
@@ -34,23 +34,23 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
             return $e->getMessage();
         } 
         $date = date("d-M-Y h:i:s");
-        $output->writeln($date.": Programacion generada");
+        $output->writeln($date.": Inscripcion generada");
 
-        //enviar programacion
+        //enviar inscripcion
         if(is_null($notification->getSender()))
             $recipients = array($notification->getReciever()->getEmail());
         else
             $recipients = array($notification->getReciever()->getEmail(), $notification->getSender()->getEmail());
 
         $today = date("d-M-Y");
-        $filename = "Programacion_".$today;
-        $path = "Programaciones/";
+        $filename = "inscrpcion_".$today;
+        $path = "Inscripciones/";
 
         $message = \Swift_Message::newInstance()
             ->setSubject('Programación de Cursos IPre')
             ->setFrom('gestionipre@ing.puc.cl')
             ->setTo(array('evsvec@uc.cl'))
-            ->setBody("Hola, adjuntamos la programación de cursos de este mes, saludos, \nGestión IPre")
+            ->setBody("Hola, adjuntamos la inscripción de cursos de este mes, saludos, \nGestión IPre")
             ->attach(\Swift_Attachment::fromPath($path.$filename.".xlsx"))
         ;
 
@@ -58,15 +58,17 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
         /* fin mail */
     }
 
+
     //Hardcoded report :S
-    private function generateProgramacionXLSX($dataArray)
+    private function generateInscripcionXLSX($dataArray)
     {
       $em = $this->getContainer()->get('doctrine')->getManager();
+
       //new \DateTime()
       $today = date("d-M-Y");
-      $filename = "Programacion_".$today;
+      $filename = "Inscripcion_".$today;
+      $path = $this->get('kernel')->getRootDir()."web/Inscripciones/";
 
-      $path = $this->get('kernel')->getRootDir()."web/Programaciones/";
       // ask the service for a 2007 excel
       $phpExcelObject = $this->getContainer()->get('phpexcel')->createPHPExcelObject();
 
@@ -83,23 +85,16 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
       $phpExcelObject->setActiveSheetIndex(0)->setCellValue('C1', "Cr.");
         //Semestre  
       $phpExcelObject->setActiveSheetIndex(0)->setCellValue('D1', "Semestre");
-        //Calificación  
-      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('E1', "Calificación");
-        //Nombre curso  
-      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('F1', "Nombre Curso");
-        //Nombre y Apellidos Profesor 
-      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('G1', "Nombre y Apellidos Profesor");
-        //RUN //Profesor  
-      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('H1', "RUN Profesor");
-        //Retiro  
-      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('I1', "Retiro");
-        //Vacantes  
-      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('J1', "Vacantes");
-        //Horario
-      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('K1', "Horario");
+        //Nombre Curso  
+      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('E1', "Nombre Curso");
+        //Nombre y Apellidos Alumno  
+      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('F1', "Nombre y Apellidos Alumno");
+        //RUN Alumno
+      $phpExcelObject->setActiveSheetIndex(0)->setCellValue('G1', "RUN Alumno");
 
       //set data
       $number = 1;
+
       foreach ($dataArray as $research) 
       {
         $number++;
@@ -110,45 +105,15 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
         //Cr. 
         $phpExcelObject->getActiveSheet()->setCellValue("C".$number, $research->getCredits());
         //Semestre  
-        $phpExcelObject->getActiveSheet()->setCellValue("D".$number, $research->getSection());
-        //Calificación  
-        switch ($research->getModalityOP()) {
-          case 1:
-            $method = "Estandar (Nota de 1.0 a 7.0)";
-            break;
-          case 2:
-            $method = "Alfanumerico (Aprobado/Reprobado)";
-            break;
-        }
-        $phpExcelObject->getActiveSheet()->setCellValue("E".$number, $method);
-        //Nombre curso  
+        $semester = $em->getRepository('BackendBundle:Research')->getSemester($research);
+        $phpExcelObject->getActiveSheet()->setCellValue("D".$number, $semester);
+        //Nombre Curso
         $classCodeArray = $em->getRepository('BackendBundle:Application')->getClassCode($research->getOportunityResearch(), $research->getStudent());
-        $phpExcelObject->getActiveSheet()->setCellValue("F".$number, $classCodeArray["name"]);
-        //Nombre y Apellidos Profesor 
-        $mentorsName = "";
-        foreach ($research->getMentorsNameWResponsible() as $name) {
-          if ($mentorsName != "")
-            $mentorsName = $mentorsName."\n";
-          $mentorsName = $mentorsName.$name;
-        }
-        $phpExcelObject->getActiveSheet()->setCellValue("G".$number, $mentorsName);
-        $phpExcelObject->getActiveSheet()->getStyle('G'.$number)->getAlignment()->setWrapText(true);
-        //RUN //Profesor  
-        $mentorsRut = "";
-        foreach ($research->getMentorsRutWResponsible() as $rut) {
-          if ($mentorsRut != "")
-            $mentorsRut = $mentorsRut."\n";
-          $mentorsRut = $mentorsRut.$rut;
-        }
-        $phpExcelObject->getActiveSheet()->setCellValue("H".$number, $mentorsRut);
-        $phpExcelObject->getActiveSheet()->getStyle('H'.$number)->getAlignment()->setWrapText(true);
-        //$phpExcelObject->getActiveSheet()->setCellValue("H".$number, $research->getMentorsRutWResponsible());
-        //Retiro  
-        $phpExcelObject->getActiveSheet()->setCellValue("I".$number, "No retirable");
-        //Vacantes  
-        $phpExcelObject->getActiveSheet()->setCellValue("J".$number, 10);
-        //Horario        
-        $phpExcelObject->getActiveSheet()->setCellValue("K".$number, "Sin horario");
+        $phpExcelObject->getActiveSheet()->setCellValue("E".$number, $classCodeArray["name"]);
+        //Nombre y Apellidos Alumno
+        $phpExcelObject->getActiveSheet()->setCellValue("F".$number, $research->getStudent()->getFullName());
+        //RUN Alumno 
+        $phpExcelObject->getActiveSheet()->setCellValue("G".$number, $research->getStudent()->getRutText());
       }
 
       //agregamos los bordes
@@ -161,10 +126,10 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
           ),
       );
 
-      $phpExcelObject->getActiveSheet()->getStyle('A1:K'.$number)->applyFromArray($styleArray);
+      $phpExcelObject->getActiveSheet()->getStyle('A1:G'.$number)->applyFromArray($styleArray);
 
       //headers bold
-      $phpExcelObject->getActiveSheet()->getStyle("A1:K1")->getFont()->setBold(true);
+      $phpExcelObject->getActiveSheet()->getStyle("A1:G1")->getFont()->setBold(true);
 
       //autosize a las columnas
       $phpExcelObject->getActiveSheet()->getColumnDimension('A')->setAutoSize(true);
@@ -174,10 +139,6 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
       $phpExcelObject->getActiveSheet()->getColumnDimension('E')->setAutoSize(true);
       $phpExcelObject->getActiveSheet()->getColumnDimension('F')->setAutoSize(true);
       $phpExcelObject->getActiveSheet()->getColumnDimension('G')->setAutoSize(true);
-      $phpExcelObject->getActiveSheet()->getColumnDimension('H')->setAutoSize(true);
-      $phpExcelObject->getActiveSheet()->getColumnDimension('I')->setAutoSize(true);
-      $phpExcelObject->getActiveSheet()->getColumnDimension('J')->setAutoSize(true);
-      $phpExcelObject->getActiveSheet()->getColumnDimension('K')->setAutoSize(true);
 
       //nombre de la hoja
       $phpExcelObject->getActiveSheet()->setTitle('Hoja 1');
@@ -189,5 +150,4 @@ class SendProgramacionxlsxCommand extends ContainerAwareCommand
       $writer = $this->getContainer()->get('phpexcel')->createWriter($phpExcelObject, 'Excel2007');
       $writer->save($path.$filename.".xlsx");
     }
-
-}
+} 
